# uwds

./: .gitignore  CMakeLists.txt  PROPERTIES.md  QUICKSTART.md  README.md  download_data.sh  generate_documentation.sh  install_dependencies.sh  libuwds.xml  package.xml  requirements.txt  rosdoc.yaml  setup.py
img/: uwds_data_structure.xml
include/uwds/: ar_objects_provider.h  clients.h  dynamic_connection_based_nodelet.h  env_provider.h  knowledge_base_client.h  monitor_nodelet.h  provider_nodelet.h  reconfigurable_client.h  regex_filter.h  robot_provider.h  scene_viewer.h  server.h  simple_object_provider.h  uwds.h  uwds_client_nodelet.h  uwds_provider.h  uwds_server_nodelet.h  world_merger.h
include/uwds/proxy/: knowledge_base_proxy.h  meshes_proxy.h  ontology_proxy.h  proxy.h  scene_proxy.h  timeline_proxy.h  topology_proxy.h  world_proxy.h  worlds_proxy.h
include/uwds/service/: knowledge_base_service.h  meshes_service.h  ontology_service.h  scene_service.h  service.h  timeline_service.h  topology_service.h
include/uwds/tools/: model_loader.h
include/uwds/types/: concurrent_container.h  filter.h  meshes.h  monitor.h  node.h  nodes.h  scene.h  situation.h  situations.h  timeline.h  topology.h  uuid.h  world.h  worlds.h
launch/: ar_objects_provider.launch  beliefs_filter.launch  env_provider.launch  knowledge_base.launch  overlaytext_situation_publisher.launch  physics_reasoner.launch  scene_viewer.launch  simple_object_provider.launch  timeline_viewer.launch  uwds_kb_lite.launch  uwds_server.launch  visibility_monitor.launch  world_merger.launch
res/: example.blend
res/blend/: adream_example.blend  example.blend
res/primitives/3ds/: box.3ds  cylinder.3ds  sphere.3ds
res/urdf/: blue_bin.urdf  floor.urdf  green_bin.urdf  green_cylinder.urdf  orange_cup.urdf  plane.urdf  robot.urdf  table.urdf
scripts/: beliefs_filter.py  overlaytext_situation_publisher.py  physics_reasoner.py  timeline_viewer.py  uwds_kb_lite.py  uwds_knowledge_base.py  view_scene.py  view_topology.py  view_world.py  visibility_monitor.py
src/: ar_objects_provider.cpp  dynamic_connection_based_nodelet.cpp  env_provider.cpp  reconfigurable_client.cpp  regex_filter.cpp  robot_provider.cpp  scene_viewer.cpp  server.cpp  simple_object_provider.cpp  uwds.cpp  uwds_client_nodelet.cpp  uwds_provider.cpp  uwds_server_nodelet.cpp  world_merger.cpp
src/pyuwds/: clients.py  dynamic_connection_based_node.py  pyuwds.py  reconfigurable_client.py  types.py  uwds.py  uwds_client.py
src/pyuwds/proxy/: knowledge_base_proxy.py  meshes_proxy.py  proxy.py  scene_proxy.py  timeline_proxy.py  topology_proxy.py  world_proxy.py  worlds_proxy.py
src/pyuwds/tools/: glove.py
src/pyuwds/types/: concurrent_container.py  gen_uuid.py  hexuuid.py  meshes.py  nodes.py  scene.py  situations.py  timeline.py  topology.py  uuid.py  world.py
src/tools/: model_loader.cpp
test/: test.cpp
